--- a/src/componets/button.css
+++ b/src/componets/button.css
@@ -4,7 +4,7 @@
   max-width: 100%;
   padding: 20px 10px;
   background-color: #e25c00;
-  border: 2px soled transparent;
+  border: 4px solid transparent;
   box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
   color: #fff;
   font-size: 1.125rem;
@@ -16,6 +16,6 @@
 .btn:focus,
 .btn:hover {
   background-color: #fff;
-  border-color: currentColor;
+  border-color: #e25c00;
   color: #e25c00;
 }
