--- a/src/componets/button.css
+++ b/src/componets/button.css
@@ -4,21 +4,20 @@
   display: inline-block;
   width: 300px;
   max-width: 100%;
+  height: auto;
   min-height: 4rem;
   padding: 10px;
-  height: auto;
+  font-size: 1.125rem;
+  color: var(--theme-light);
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
   background-color: var(--theme-primary);
   border: 4px solid transparent;
   box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
-  color: var(--theme-light);
-  font-size: 1.125rem;
-  text-align: center;
-  text-decoration: none;
   transition: 0.25;
-  vertical-align: middle;
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--lg {
   width: 340px;
   padding-top: 25px;
@@ -26,7 +25,6 @@
   font-size: 1.375rem;
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--sm {
   width: 240px;
   padding-top: 10px;
@@ -34,91 +32,76 @@
   font-size: 1rem;
 }
 
-.btn:focus,
-.btn:hover {
+.btn:focus {
   color: var(--theme-primary);
   background-color: var(--theme-light);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--light {
   color: var(--theme-primary);
   background-color: var(--theme-light);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--light:hover {
   color: var(--theme-light);
   background-color: var(--theme-primary);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--secondary {
   color: var(--theme-light);
   background-color: var(--theme-secondary);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--secondary:hover {
   color: var(--theme-secondary);
   background-color: var(--theme-light);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--success {
   color: var(--theme-light);
   background-color: var(--theme-success);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--success:hover {
   color: var(--theme-success);
   background-color: var(--theme-light);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--danger {
   color: var(--theme-light);
   background-color: var(--theme-danger);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--danger:hover {
   color: var(--theme-danger);
   background-color: var(--theme-light);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--warning {
   color: var(--theme-light);
   background-color: var(--theme-danger);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--warning:hover {
   color: var(--theme-danger);
   background-color: var(--theme-light);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--info {
   color: var(--theme-light);
   background-color: var(--theme-info);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--info:hover {
   color: var(--theme-info);
   background-color: var(--theme-light);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--dark {
   color: var(--theme-light);
   background-color: var(--theme-dark);
 }
 
-/* stylelint-disable-next-line selector-class-pattern */
 .btn--dark:hover {
   color: var(--theme-dark);
   background-color: var(--theme-light);
