--- a/src/componets/button.css
+++ b/src/componets/button.css
@@ -32,6 +32,23 @@
   font-size: 1rem;
 }
 
+.btn--arrow-right {
+  position: relative;
+  padding-right: 2em;
+  padding-left: 1.38em;
+}
+
+.btn--arrow-right::after {
+  position: absolute;
+  top: 50%;
+  right: 0.83em;
+
+  /* font-family: "Font Awesome 5Free"; */
+  font-weight: 900;
+  content: "\f061";
+  transform: translateY(-50%);
+}
+
 .btn:focus {
   color: var(--theme-primary);
   background-color: var(--theme-light);
