--- a/src/componets/button.css
+++ b/src/componets/button.css
@@ -32,6 +32,10 @@
   font-size: 1rem;
 }
 
+.btn--rounded {
+  border-radius: 10px;
+}
+
 .btn--arrow-right {
   position: relative;
   padding-right: 2em;
@@ -45,7 +49,7 @@
 
   /* font-family: "Font Awesome 5Free"; */
   font-weight: 900;
-  content: "\f061";
+  content: "\2794";
   transform: translateY(-50%);
 }
 
