--- a/src/componets/card.css
+++ b/src/componets/card.css
@@ -4,11 +4,13 @@
   overflow: hidden;
   border: 2px solid #000;
   box-shadow: 5px 5px 10px 5px rgb(0 0 0 / 15%);
+  transition: 0.2s;
 }
 
 .card:hover {
   box-shadow: 5px 5px 14px 7px rgb(0 0 0 / 15%);
   transition: 0.2s;
+  transform: scale(1.05);
 }
 
 .card:active {
