--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 main {
+  min-height: 85vh;
   padding-top: 40px;
   padding-bottom: 40px;
   background: #58a;
@@ -14,12 +15,4 @@ main {
   width: min(90%, 1280px);
   margin-right: auto;
   margin-left: auto;
-}
-
-.main--cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-  max-width: auto;
 }
