--- a/src/componets/component-view-card.css
+++ b/src/componets/component-view-card.css
@@ -30,3 +30,35 @@
   height: 300px;
   overflow: hidden;
 }
+
+.component-view-card--row-1 {
+  grid-template-rows: repeat(1, 1fr);
+}
+
+.component-view-card--row-2 {
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.component-view-card--row-3 {
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.component-view-card--row-4 {
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.component-view-card--col-1 {
+  grid-template-rows: repeat(5, 1fr);
+}
+
+.component-view-card--col-2 {
+  grid-template-rows: repeat(6, 1fr);
+}
+
+.component-view-card--col-3 {
+  grid-template-rows: repeat(7, 1fr);
+}
+
+.component-view-card--col-4 {
+  grid-template-rows: repeat(8, 1fr);
+}
