--- a/src/componets/heading.css
+++ b/src/componets/heading.css
@@ -6,6 +6,23 @@
   background-color: #e25c00;
 }
 
+.inner1-heading__inner {
+  position: relative;
+  display: inline-block;
+  transform: translateY(-20%);
+}
+
+.level1-heading__inner::after {
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  width: 80px;
+  height: 1px;
+  content: "";
+  background-color: currentColor;
+  transform: translatex (-50%);
+}
+
 .level2-heading {
   padding: 30px 10px;
   font-size: 1.75em;
@@ -13,3 +30,4 @@
   text-align: center;
   background-color: #e25c00;
 }
+
