--- a/src/componets/button.css
+++ b/src/componets/button.css
@@ -11,6 +11,7 @@
   color: var(--theme-light);
   text-align: center;
   text-decoration: none;
+  text-decoration: none;
   vertical-align: middle;
   background-color: var(--theme-primary);
   border: 4px solid transparent;
